// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequirementsForm /> call api on every value changed 1`] = `undefined`;

exports[`<RequirementsForm /> call api on every value changed 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<RequirementsForm /> call api on every value changed 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "input": Object {
          "requirement": "requirement5",
          "value": true,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`<RequirementsForm /> call api on every value changed 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "input": Object {
          "phone": "+33606060606",
        },
      },
    ],
    Array [
      Object {
        "input": Object {
          "dateOfBirth": "1992-04-09T23:21:06+0200",
        },
      },
    ],
    Array [
      Object {
        "input": Object {
          "firstname": "Aurélien",
        },
      },
    ],
    Array [
      Object {
        "input": Object {
          "lastname": "David",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`<RequirementsForm /> doesnt call api when value is same 1`] = `undefined`;

exports[`<RequirementsForm /> should render a vote widget for a simple vote without limit 1`] = `
<form>
  <div
    className="col-sm-12 col-xs-12 alert__form_succeeded-message"
  />
  <Field
    addonBefore="France +33"
    component={[Function]}
    divClassName="col-sm-12 col-xs-12"
    id="requirement1"
    key="requirement1"
    label={
      <FormattedMessage
        id="mobile-phone"
        values={Object {}}
      />
    }
    name="requirement1"
    type="text"
  />
  <Field
    component={[Function]}
    divClassName="row"
    globalClassName="col-sm-12 col-xs-12"
    id="requirement2"
    key="requirement2"
    label={
      <FormattedMessage
        id="form.label_date_of_birth"
        values={Object {}}
      />
    }
    name="requirement2"
  />
  <Field
    component={[Function]}
    divClassName="col-sm-12 col-xs-12"
    id="requirement3"
    key="requirement3"
    label={
      <FormattedMessage
        id="form.label_firstname"
        values={Object {}}
      />
    }
    name="requirement3"
    type="text"
  />
  <Field
    component={[Function]}
    divClassName="col-sm-12 col-xs-12"
    id="requirement4"
    key="requirement4"
    label={
      <FormattedMessage
        id="global.name"
        values={Object {}}
      />
    }
    name="requirement4"
    type="text"
  />
  <Field
    component={[Function]}
    divClassName="col-sm-12 col-xs-12"
    id="requirement5"
    key="requirement5"
    label={false}
    name="requirement5"
    type="checkbox"
  >
    Offrir mon âme à Voldemort
  </Field>
</form>
`;

exports[`<RequirementsForm /> validate correctly 1`] = `Object {}`;

exports[`<RequirementsForm /> validate correctly 2`] = `Object {}`;

exports[`<RequirementsForm /> validate correctly 3`] = `
Object {
  "requirement1": "profile.constraints.phone.invalid",
  "requirement2": "global.required",
  "requirement3": "global.required",
  "requirement4": "global.required",
  "requirement5": "global.required",
}
`;

exports[`<RequirementsForm /> validate correctly 4`] = `
Object {
  "requirement1": "global.required",
  "requirement2": "global.required",
  "requirement3": "global.required",
  "requirement4": "global.required",
  "requirement5": "global.required",
}
`;
